stuck with drop

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 
 		<div class="container">
 			<div class="ships">
-				<div class="destroyer-ship" draggable="true"></div>
-				<div class="cruiser-ship" draggable="true"></div>
-				<div class="cruiser-ship" draggable="true"></div>
-				<div class="battleship-ship" draggable="true"></div>
-				<div class="carrier-ship" draggable="true"></div>
+				<div id="ships" class="destroyer-ship" draggable="true"></div>
+				<div id="ships" class="cruiser-ship" draggable="true"></div>
+				<div id="ships" class="cruiser-ship-2" draggable="true"></div>
+				<div id="ships" class="battleship-ship" draggable="true"></div>
+				<div id="ships" class="carrier-ship" draggable="true"></div>
 			</div>
 			<div id="player" class="mini-container">
 				<p class="name">Player</p>
