rotate, render, big mess

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script
+			src="https://kit.fontawesome.com/20571f38a7.js"
+			crossorigin="anonymous"
+		></script>
 		<title>Battleship</title>
 	</head>
 	<body>
@@ -17,6 +21,9 @@
 				<div id="ships" class="cruiser-ship-2" draggable="true"></div>
 				<div id="ships" class="battleship-ship" draggable="true"></div>
 				<div id="ships" class="carrier-ship" draggable="true"></div>
+			</div>
+			<div class="ship-btn">
+				<i class="fas fa-sync-alt fa-2x rotate"></i>
 			</div>
 			<div id="player" class="mini-container">
 				<p class="name">Player</p>
