refactor drag & drop

--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
 
 		<div class="container">
 			<div class="ships">
-				<div id="ships" class="destroyer-ship" draggable="true"></div>
-				<div id="ships" class="cruiser-ship" draggable="true"></div>
-				<div id="ships" class="cruiser-ship-2" draggable="true"></div>
-				<div id="ships" class="battleship-ship" draggable="true"></div>
-				<div id="ships" class="carrier-ship" draggable="true"></div>
+				<div class="ship destroyer-ship" draggable="true"><div class="ship-width" id="destroyer-0"></div><div class="ship-width" id="destroyer-1"></div></div>
+				<div class="ship cruiser-ship" draggable="true"><div class="ship-width" id="cruiser-0"></div><div class="ship-width" id="cruiser-1"></div><div class="ship-width" id="cruiser-2"></div></div>
+				<div class="ship cruiser-ship-2" draggable="true"><div class="ship-width" id="cruiser-0"></div><div class="ship-width" id="cruiser-1"></div><div class="ship-width" id="cruiser-2"></div></div>
+				<div class="ship battleship-ship" draggable="true"><div class="ship-width" id="battleship-0"></div><div class="ship-width" id="battleship-1"></div><div class="ship-width" id="battleship-2"></div><div class="ship-width" id="battleship-3"></div></div>
+				<div class="ship carrier-ship" draggable="true"><div class="ship-width" id="carrier-0"></div><div class="ship-width" id="carrier-1"></div><div class="ship-width" id="carrier-2"></div><div class="ship-width" id="carrier-3"></div><div class="ship-width" id="carrier-4"></div></div>
 			</div>
 			<div class="ship-btn">
 				<i class="fas fa-sync-alt fa-2x rotate"></i>
