blockedSquares not working properly fix

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,11 @@
 				<p class="name">Computer</p>
 				<div id="plr2" class="game-board"></div>
 			</div>
+			<div class="start-game">
+				<button class="start-btn">Start Game
+					<span class="gold"></span><span class="gold"></span><span class="gold"></span><span class="gold"></span>
+				</button>
+			</div>
 		</div>
 	</body>
 
